test/Macros/imported_type_error.code
// REQUIRES: language_language_parser, executable_test
// REQUIRES: language_feature_MacrosOnImports

// RUN: %empty-directory(%t)
// RUN: %host-build-language -language-version 5 -emit-library -o %t/%target-library-name(MacroDefinition) -module-name=MacroDefinition %S/Inputs/syntax_macro_definitions.code -g -no-toolchain-stdlib-rpath -language-version 5

// Build the macro library to give us access to ExpandTypeError.
// RUN: %target-language-frontend -language-version 5 -emit-module -o %t/macro_library.codemodule %S/Inputs/macro_library.code -module-name macro_library -load-plugin-library %t/%target-library-name(MacroDefinition)

// FIXME: we should typecheck these macro expansions before silgen
// RUN: %target-language-frontend(mock-sdk: %clang-importer-sdk) -typecheck -verify -language-version 5 -enable-experimental-feature MacrosOnImports -load-plugin-library %t/%target-library-name(MacroDefinition) -module-name ErrorModuleUser %s -I %t

// RUN: not %target-language-frontend(mock-sdk: %clang-importer-sdk) -emit-module -language-version 5 -enable-experimental-feature MacrosOnImports -load-plugin-library %t/%target-library-name(MacroDefinition) -module-name ErrorModuleUser %s -I %t 2>&1 | %FileCheck %s

import ImportedMacroError
import macro_library

foo(42)

// CHECK: error: cannot find 'callToMissingFunction' in scope
